--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" href="data:," />
+    <title>Kart Challenge</title>
   </head>
   <body>
     <div id="root"></div>
